@@ -1,4 +1,5 @@
 class @IssuableForm
+  wipRegex: /^\[?WIP(\]|:| )\s*/i
   constructor: (@form) ->
     GitLab.GfmAutoComplete.setup()
     new UsersSelect()
@@ -13,6 +14,8 @@ class @IssuableForm
 
     @form.on "submit", @resetAutosave
     @form.on "click", ".btn-cancel", @resetAutosave
+
+    @initWip()
 
   initAutosave: ->
     new Autosave @titleField, [
@@ -30,3 +33,41 @@ class @IssuableForm
   resetAutosave: =>
     @titleField.data("autosave").reset()
     @descriptionField.data("autosave").reset()
+
+  initWip: ->
+    return unless @form.find(".js-wip-explanation").length
+    
+    @form.on "click", ".js-remove-wip", @removeWip
+
+    @form.on "click", ".js-add-wip", @addWip
+
+    @titleField.on "change", @renderWipExplanation
+
+    @renderWipExplanation()
+
+  workInProgress: ->
+    @titleField.val().match(@wipRegex)
+
+  renderWipExplanation: =>
+    if @workInProgress()
+      @form.find(".js-wip-explanation").show()
+      @form.find(".js-no-wip-explanation").hide()
+    else
+      @form.find(".js-wip-explanation").hide()
+      @form.find(".js-no-wip-explanation").show()
+
+  removeWip: (event) =>
+    event.preventDefault()
+
+    return unless @workInProgress()
+    @titleField.val @titleField.val().replace(@wipRegex, "")
+
+    @renderWipExplanation()
+
+  addWip: (event) =>
+    event.preventDefault()
+
+    return if @workInProgress()
+    @titleField.val "WIP: #{@titleField.val()}"
+
+    @renderWipExplanation()
